# gnapt-stimgen

./: .gitignore  README.rst  StimulusCodingSchema.xlsx  gnat-stimgen.py  pyproject.toml
gnat-stimgen/: __init__.py  __main__.py  types.py  validation.py
gnat-stimgen/datasets/: EngCym.py  __init__.py
gnat_stimgen/: __main__.py  types.py  validation.py
gnat_stimgen/datasets/: EngCym.py  EngCym_nonsym.py  EngCym_symswap.py  GerLtz.py  ItaLmo.py  __init__.py
