[tool.poetry]
name = "gnat-stimgen"
version = "0.1.2"
description = "Stimulus generator for the Go-No Go Association Task used for L'ART's 2023/2024 experiments."
authors = ["Florian <florian@florian.me.uk>"]
license = "Apache-2.0"
readme = "README.rst"
packages = [{include = "gnat_stimgen"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
xlsxwriter = "^3.1.3"


[tool.poetry.group.dev.dependencies]
nuitka = "^1.8.1"
imageio = "^2.31.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
